@@ -5,6 +5,8 @@
 * Refactored Collection related methods into its own class.
 * Restructured the library.
 * Refactored many parts of the library and updated its dependencies.
+* Added requirements to have fyre.co at end of network name.
+* Made user auth check allow dash, underscore, and dots.
 
 === 1.3.2 2014-08-12
 
